fixed shifting

--- a/style.css
+++ b/style.css
@@ -90,8 +90,7 @@ footer{
     width: 350px;
     margin: 20px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-    position: absolute;
-    bottom: 100px;
+    margin-top: 250px;
     
 }
   
